[gd_scene load_steps=12 format=3 uid="uid://m2fuidb5xdne"]

[ext_resource type="Script" path="res://Enemy/enemy_goblin_archer.gd" id="1_archer"]
[ext_resource type="Texture2D" uid="uid://bb2tqmla8xdg8" path="res://Textures/Enemy/kolbold_weak.png" id="2_texture"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_hurtbox"]
[ext_resource type="PackedScene" uid="uid://uhr6mtuisqm1" path="res://Utility/hit_box.tscn" id="4_hitbox"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_sound"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_archer"]
radius = 2.5
height = 12.0

[sub_resource type="Animation" id="Animation_idle"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_archer"]
_data = {
"RESET": SubResource("Animation_idle"),
"walk": SubResource("Animation_walk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurt"]
size = Vector2(20, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hit"]
size = Vector2(12, 18)

[node name="enemy_goblin_archer" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_archer")
movement_speed = 22.0
hp = 15
knockback_recovery = 3.0
experience = 2
enemy_damage = 2
attack_range = 200.0
attack_cooldown = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
modulate = Color(0.5, 0.8, 0.5, 1)
texture = ExtResource("2_texture")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CapsuleShape2D_archer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_archer")
}

[node name="HurtBox" parent="." instance=ExtResource("3_hurtbox")]
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_hurt")

[node name="HitBox" parent="." instance=ExtResource("4_hitbox")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_hit")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sound")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
